--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -68,54 +68,61 @@
             <h3 class="modal-title" id="modal-title">Add Widget - {{$ctrl.type.name}}</h3>
         </div>
         <div class="modal-body" id="modal-body">
-            <form>
-                <div class="form-group row">
-                    <label class="col-sm-1 col-form-label">Label: </label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" ng-model="$ctrl.model.name">
-                    </div>
-                    <div class="col-sm-3">
-                        <label class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" ng-model="$ctrl.model.show_label">
-                            <span class="custom-control-label">Show?</span>
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Entity: </label>
-                    <div class="col-sm-10">
-                        <select class="form-control" ng-model="$ctrl.model.entity" ng-options="entity.entity_id as entity.friendly_name for entity in $ctrl.entities"></select>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Size: </label>
-                    <div class="col-sm-6">
-                        <div class="btn-group">
-                            <label class="btn btn-primary" ng-repeat="size in $ctrl.type.availableSizes" ng-model="$ctrl.model.size" uib-btn-radio="{{size.value}}">
-                                {{size.name}}
-                            </label>
+            <div class="row">
+                <div class="col-lg-6">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-sm-1 col-form-label">Label: </label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" ng-model="$ctrl.model.name">
+                            </div>
+                            <div class="col-sm-3">
+                                <label class="custom-control custom-switch">
+                                    <input type="checkbox" class="custom-control-input" ng-model="$ctrl.model.show_label">
+                                    <span class="custom-control-label">Show?</span>
+                                </label>
+                            </div>
                         </div>
-                    </div>
-                    <label class="col-sm-4 col-form-label">{{$ctrl.model.size.width}} X {{$ctrl.model.size.height}}</label>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">Entity: </label>
+                            <div class="col-sm-10">
+                                <select class="form-control" ng-model="$ctrl.model.entity" ng-options="entity.entity_id as entity.friendly_name for entity in $ctrl.entities"></select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">Size: </label>
+                            <div class="col-sm-6">
+                                <div class="btn-group">
+                                    <label class="btn btn-primary" ng-repeat="size in $ctrl.type.availableSizes" ng-model="$ctrl.model.size" uib-btn-radio="{{size.value}}">
+                                        {{size.name}}
+                                    </label>
+                                </div>
+                            </div>
+                            <label class="col-sm-4 col-form-label">{{$ctrl.model.size.width}} X {{$ctrl.model.size.height}}</label>
+                        </div>
+
+                        <!-- Start custom settings for widget-->
+                        <div class="form-group row" ng-repeat="option in $ctrl.type.options">
+                            <label class="col-sm-2 col-form-label"><span ng-if="option.type != 'boolean'">{{option.name}}:</span></label>
+                            <div class="col-sm-10">
+                                <select class="form-control" ng-if="option.type == 'select'" ng-init="$ctrl.model[option.key] = option.values[0].value"
+                                        ng-options="val.value as val.display for val in option.values"
+                                        ng-model="$ctrl.model[option.key]">
+                                </select>
+                                <label class="custom-control custom-switch" ng-if="option.type == 'boolean'">
+                                    <input type="checkbox" class="custom-control-input" ng-model="$ctrl.model[option.key]">
+                                    <span class="custom-control-label">{{option.name}}</span>
+                                </label>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-
-                <!-- Start custom settings for widget-->
-                <div class="form-group row" ng-repeat="option in $ctrl.type.options">
-                    <label class="col-sm-2 col-form-label"><span ng-if="option.type != 'boolean'">{{option.name}}:</span></label>
-                    <div class="col-sm-10">
-                        <select class="form-control" ng-if="option.type == 'select'"
-                                ng-options="val.value as val.display for val in option.values"
-                                ng-model="$ctrl.model[option.key]">
-                        </select>
-                        <label class="custom-control custom-switch" ng-if="option.type == 'boolean'">
-                            <input type="checkbox" class="custom-control-input" ng-model="$ctrl.model[option.key]">
-                            <span class="custom-control-label">{{option.name}}</span>
-                        </label>
-
-                    </div>
-
+                <!-- Preview -->
+                <div class="col-lg-6">
+                    <widget-content type="$ctrl.type" config="$ctrl.model" value="$ctrl.entityValue()" class="editing_widget border-primary">
+                    </widget-content>
                 </div>
-            </form>
+            </div>
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
