Initial layout of boards; drag and drop to position

--- a/ui/app.less
+++ b/ui/app.less
@@ -3,6 +3,8 @@
 @import "bower_components/font-awesome/less/fontawesome.less";
 @fa-font-path: "bower_components/font-awesome/fonts";
 
+@import "bower_components/angular-gridster/src/angular-gridster.less";
+
 /* Component LESS */
 @import "partial/editor/editor.less";
 @import "directive/dashboardCanvas/dashboardCanvas.less";
