--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -57,7 +57,11 @@
                 </div>
             </div>
             <div class="card-body">
-                <dashboard-canvas ng-style="canvasStyle()"></dashboard-canvas>
+                <dashboard-canvas ng-style="canvasStyle()"
+                                    items="page.widgets"
+                                    width="selectedBoard.width"
+                                    height="selectedBoard.height">
+                </dashboard-canvas>
             </div>
         </div>
     </div>
@@ -98,7 +102,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <label class="col-sm-4 col-form-label">{{$ctrl.model.size.width}} X {{$ctrl.model.size.height}}</label>
+                            <label class="col-sm-4 col-form-label">{{$ctrl.model.size.x}} X {{$ctrl.model.size.y}}</label>
                         </div>
 
                         <!-- Start custom settings for widget-->
@@ -119,7 +123,7 @@
                 </div>
                 <!-- Preview -->
                 <div class="col-lg-6">
-                    <widget-content type="$ctrl.type" config="$ctrl.model" value="$ctrl.entityValue()" class="editing_widget border-primary">
+                    <widget-content type="$ctrl.type" config="$ctrl.model" value="$ctrl.entityValue()" class="editing_widget border-primary" editable="false">
                     </widget-content>
                 </div>
             </div>
