--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -25,9 +25,9 @@
 
                 <div class="form-group mr-3">
                     <label class="mr-3">Size: </label>
-                    <input class="form-control" type="text" ng-model="selectedBoard.width" ng-enabled="selectedBoard.customizable">
+                    <input class="form-control" type="text" ng-model="selectedBoard.width" ng-disabled="!selectedBoard.customizable">
                     <label class="mr-3"> X </label>
-                    <input class="form-control" type="text" ng-model="selectedBoard.height">
+                    <input class="form-control" type="text" ng-model="selectedBoard.height" ng-disabled="!selectedBoard.customizable">
                 </div>
 
 
@@ -60,16 +60,17 @@
                 <dashboard-canvas ng-style="canvasStyle()"
                                     items="page.widgets"
                                     width="selectedBoard.width"
-                                    height="selectedBoard.height">
+                                    height="selectedBoard.height"
+                                    on-edit="editWidget">
                 </dashboard-canvas>
             </div>
         </div>
     </div>
 
 
-    <script type="text/ng-template" id="newWidget.html">
+    <script type="text/ng-template" id="editWidget.html">
         <div class="modal-header">
-            <h3 class="modal-title" id="modal-title">Add Widget - {{$ctrl.type.name}}</h3>
+            <h3 class="modal-title" id="modal-title"><span ng-show="$ctrl.isNew">Add</span><span ng-show="!$ctrl.isNew">Edit</span> Widget - {{$ctrl.type.name}}</h3>
         </div>
         <div class="modal-body" id="modal-body">
             <div class="row">
@@ -109,7 +110,7 @@
                         <div class="form-group row" ng-repeat="option in $ctrl.type.options">
                             <label class="col-sm-2 col-form-label"><span ng-if="option.type != 'boolean'">{{option.name}}:</span></label>
                             <div class="col-sm-10">
-                                <select class="form-control" ng-if="option.type == 'select'" ng-init="$ctrl.model[option.key] = option.values[0].value"
+                                <select class="form-control" ng-if="option.type == 'select'"
                                         ng-options="val.value as val.display for val in option.values"
                                         ng-model="$ctrl.model[option.key]">
                                 </select>
