Initial weather conditions; socket.io for entity state changes

--- a/ui/directive/dashboardCanvas/dashboardCanvas.less
+++ b/ui/directive/dashboardCanvas/dashboardCanvas.less
@@ -28,7 +28,7 @@
 }
 
 
-.gridster {
+.dashboard-canvas .gridster {
     background-size: 48px 48px;
     background-image:
         linear-gradient(to right, #ddd 1px, transparent 1px),
@@ -37,7 +37,7 @@
     background-position: -1px -1px;
 }
 
-.gridster-preview-holder {
+.dashboard-canvas .gridster-preview-holder {
     display: none;
     z-index: 1;
     position: absolute;
