--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -124,7 +124,7 @@
                 </div>
                 <!-- Preview -->
                 <div class="col-lg-6">
-                    <widget-content type="$ctrl.type" config="$ctrl.model" value="$ctrl.entityValue()" class="editing_widget border-primary" editable="false">
+                    <widget-content type="$ctrl.type" config="$ctrl.model" class="editing_widget border-primary" editable="false">
                     </widget-content>
                 </div>
             </div>
