--- a/ui/app.less
+++ b/ui/app.less
@@ -8,6 +8,9 @@
 /* Component LESS */
 @import "partial/editor/editor.less";
 @import "directive/dashboardCanvas/dashboardCanvas.less";
+@import "partial/dashboard/dashboard.less";
+@import "directive/dashboardViewer/dashboardViewer.less";
+@import "partial/testwidget/testwidget.less";
 /* Add Component LESS Above */
 
 .dropdown-toggle::after {
@@ -34,6 +37,65 @@
 
 .custom-switch {
     margin-top: 1.5rem;
+}
+
+.btn .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.btn-xs .mdi::before {
+    font-size: 18px;
+    top: 3px;
+}
+.btn-sm .mdi::before {
+    font-size: 18px;
+    top: 3px;
+}
+.dropdown-menu .mdi {
+    width: 18px;
+}
+.dropdown-menu .mdi::before {
+    position: relative;
+    top: 4px;
+    left: -8px;
+}
+.nav .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.navbar .navbar-toggle .mdi::before {
+    position: relative;
+    top: 4px;
+    color: #FFF;
+}
+.breadcrumb .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.breadcrumb a:hover {
+    text-decoration: none;
+}
+.breadcrumb a:hover span {
+    text-decoration: underline;
+}
+.alert .mdi::before {
+    position: relative;
+    top: 4px;
+    margin-right: 2px;
+}
+.input-group-addon .mdi::before {
+    position: relative;
+    top: 3px;
+}
+.navbar-brand .mdi::before {
+    position: relative;
+    top: 2px;
+    margin-right: 2px;
+}
+.list-group-item .mdi::before {
+    position: relative;
+    top: 3px;
+    left: -3px
 }
 
 /* Personal preference for BS modal.  The LESS below makes the backdrop white and
