--- a/ui/partial/dashboard/dashboard.less
+++ b/ui/partial/dashboard/dashboard.less
@@ -4,7 +4,12 @@
     justify-content: center;
     height: 100%;
 }
+.dashboard-view::-webkit-scrollbar { width: 0 !important }
+
+.carousel-indicators {
+    position:fixed !important
+}
 
 .carousel-indicators li {
-    background-color: #2196F3;
+    background-color: #2196F3 !important;
 }
