--- a/ui/app.less
+++ b/ui/app.less
@@ -5,6 +5,7 @@
 
 @import "bower_components/angular-gridster/src/angular-gridster.less";
 
+
 /* Component LESS */
 @import "partial/editor/editor.less";
 @import "directive/dashboardCanvas/dashboardCanvas.less";
@@ -12,6 +13,7 @@
 @import "directive/dashboardViewer/dashboardViewer.less";
 @import "partial/testwidget/testwidget.less";
 /* Add Component LESS Above */
+
 
 .dropdown-toggle::after {
     margin-left: 0.355em;
@@ -109,3 +111,77 @@
 //		.translate(0,0);
 //	}
 //}
+
+
+/* WU icons mapping to HA */
+
+/*! Black Day SVG Icons */
+.wu-black.wu-rainy { background: url(bower_components/weather-underground-icons/dist/icons/black/svg/rain.svg); }
+.wu-black.wu-windy { background: url(bower_components/weather-underground-icons/dist/icons/black/svg/hazy.svg); }
+/*.wu-black.wu-chanceflurries { background: url(icons/black/svg/chanceflurries.svg); }
+.wu-black.wu-chancerain { background: url(icons/black/svg/chancerain.svg); }
+.wu-black.wu-chancesleet { background: url(icons/black/svg/chancesleet.svg); }
+.wu-black.wu-chancesnow { background: url(icons/black/svg/chancesnow.svg); }
+.wu-black.wu-chancetstorms { background: url(icons/black/svg/chancetstorms.svg); }
+.wu-black.wu-clear { background: url(icons/black/svg/clear.svg); }
+.wu-black.wu-cloudy { background: url(icons/black/svg/cloudy.svg); }
+.wu-black.wu-flurries { background: url(icons/black/svg/flurries.svg); }
+.wu-black.wu-fog { background: url(icons/black/svg/fog.svg); }
+.wu-black.wu-hazy { background: url(icons/black/svg/hazy.svg); }
+.wu-black.wu-mostlycloudy { background: url(icons/black/svg/mostlycloudy.svg); }
+.wu-black.wu-mostlysunny { background: url(icons/black/svg/mostlysunny.svg); }
+.wu-black.wu-partlycloudy { background: url(icons/black/svg/partlycloudy.svg); }
+.wu-black.wu-partlysunny { background: url(icons/black/svg/partlysunny.svg); }
+.wu-black.wu-sleet { background: url(icons/black/svg/sleet.svg); }
+.wu-black.wu-snow { background: url(icons/black/svg/snow.svg); }
+.wu-black.wu-sunny { background: url(icons/black/svg/sunny.svg); }
+.wu-black.wu-tstorms { background: url(icons/black/svg/tstorms.svg); }
+.wu-black.wu-unknown { background: url(icons/black/svg/unknown.svg); }*/
+
+/*! White Day SVG Icons */
+.wu-white.wu-rainy { background: url(bower_components/weather-underground-icons/dist/icons/white/svg/rain.svg); }
+.wu-white.wu-windy { background: url(bower_components/weather-underground-icons/dist/icons/white/svg/hazy.svg); }
+/*.wu-white.wu-chanceflurries { background: url(icons/white/svg/chanceflurries.svg); }
+.wu-white.wu-chancerain { background: url(icons/white/svg/chancerain.svg); }
+.wu-white.wu-chancesleet { background: url(icons/white/svg/chancesleet.svg); }
+.wu-white.wu-chancesnow { background: url(icons/white/svg/chancesnow.svg); }
+.wu-white.wu-chancetstorms { background: url(icons/white/svg/chancetstorms.svg); }
+.wu-white.wu-clear { background: url(icons/white/svg/clear.svg); }
+.wu-white.wu-cloudy { background: url(icons/white/svg/cloudy.svg); }
+.wu-white.wu-flurries { background: url(icons/white/svg/flurries.svg); }
+.wu-white.wu-fog { background: url(icons/white/svg/fog.svg); }
+.wu-white.wu-hazy { background: url(icons/white/svg/hazy.svg); }
+.wu-white.wu-mostlycloudy { background: url(icons/white/svg/mostlycloudy.svg); }
+.wu-white.wu-mostlysunny { background: url(icons/white/svg/mostlysunny.svg); }
+.wu-white.wu-partlycloudy { background: url(icons/white/svg/partlycloudy.svg); }
+.wu-white.wu-partlysunny { background: url(icons/white/svg/partlysunny.svg); }
+.wu-white.wu-sleet { background: url(icons/white/svg/sleet.svg); }
+.wu-white.wu-snow { background: url(icons/white/svg/snow.svg); }
+.wu-white.wu-sunny { background: url(icons/white/svg/sunny.svg); }
+.wu-white.wu-tstorms { background: url(icons/white/svg/tstorms.svg); }
+.wu-white.wu-unknown { background: url(icons/white/svg/unknown.svg); }*/
+
+.wu-22 {
+    width: 22px;
+    height: 22px;
+}
+
+.wu-32 {
+    width: 32px;
+    height: 32px;
+}
+
+.wu-48 {
+    width: 48px;
+    height: 48px;
+}
+
+.wu-96 {
+    width: 96px;
+    height: 96px;
+}
+
+.wu-144 {
+    width: 144px;
+    height: 144px;
+}
