Adding background color selection

--- a/ui/app.less
+++ b/ui/app.less
@@ -14,6 +14,10 @@
 @import "partial/testwidget/testwidget.less";
 /* Add Component LESS Above */
 
+body.dashboard-bg-black {
+    background: black;
+    color: white;
+}
 
 .dropdown-toggle::after {
     margin-left: 0.355em;
