--- a/ui/directive/dashboardCanvas/dashboardCanvas.less
+++ b/ui/directive/dashboardCanvas/dashboardCanvas.less
@@ -45,3 +45,28 @@
     border-color: #fff;
     opacity: 0.5 !important;
 }
+
+
+.dashboard-canvas.dashboard-bg-black .gridster {
+    background-size: 48px 48px;
+    background-image:
+        linear-gradient(to right, #444 1px, transparent 1px),
+        linear-gradient(to bottom, #444 1px, transparent 1px);
+    border: 1px solid black;
+    background-position: -1px -1px;
+}
+
+
+.dashboard-canvas.dashboard-bg-black .gridster-preview-holder {
+    display: none;
+    z-index: 1;
+    position: absolute;
+    background-color: #ddd !important;
+    border-color: #000;
+    opacity: 0.5 !important;
+}
+
+.dashboard-bg-black .widget-content-overlay {
+    background-color: rgba(221,221,221,0.8);
+    color: black;
+}
