--- a/ui/partial/editor/editor.less
+++ b/ui/partial/editor/editor.less
@@ -8,3 +8,8 @@
 .editing_widget {
     border: thin solid;
 }
+
+.dashboard-canvas.dashboard-bg-black {
+    background: black;
+    color: white;
+}
