--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -5,6 +5,7 @@
             <a ng-repeat="board in boards" class="dropdown-item" href="#" ng-click="loadBoard(board.name)">{{board.name}}</a>
         </div>
         <button class="btn btn-flat" type="button" ng-click="addBoard()"><i class="fas fa-plus"></i> Add Board</button>
+        <button class="btn btn-flat" type="button" ng-click="addPage()"><i class="fas fa-plus"></i> Add Page</button>
         <button class="btn btn-flat" type="button" ng-click="saveBoard()"><i class="fas fa-lg fa-save"></i></button>
     </nav>
     <div class="row mb-3">
@@ -32,15 +33,22 @@
 
 
                 <div class="form-group mr-3">
+                    <label class="mr-3">Background: </label>
+                    <select class="form-control" ng-model="selectedBoard.background" ng-default="'white'" style="width:100px;">
+                        <option value="white">White</option>
+                        <option value="black">Black</option>
+                    </select>
+                </div>
+
+                <div class="form-group mr-3">
                     <label class="custom-control custom-switch">
                         <input type="checkbox" name="cbportrait" class="custom-control-input" ng-model="selectedBoard.portrait">
                         <span class="custom-control-label" for="cbportrait" ng-show="selectedBoard.portrait">Portrait</span>
                         <span class="custom-control-label" for="cbportrait" ng-show="!selectedBoard.portrait">Landscape</span>
                     </label>
                 </div>
-                <div class="form-group">
-                    <button class="btn btn-secondary" type="button" ng-click="addPage()"><i class="fas fa-plus"></i> Add Page</button>
-                </div>
+
+
             </div>
         </div>
     </div>
@@ -58,6 +66,7 @@
             </div>
             <div class="card-body">
                 <dashboard-canvas ng-style="canvasStyle()"
+                                    class="dashboard-bg-{{selectedBoard.background}}"
                                     items="page.widgets"
                                     width="selectedBoard.width"
                                     height="selectedBoard.height"
