Hassio integration and central build

--- a/ui/partial/editor/editor.html
+++ b/ui/partial/editor/editor.html
@@ -4,9 +4,9 @@
         <div class="dropdown-menu">
             <a ng-repeat="board in boards" class="dropdown-item" href="#" ng-click="loadBoard(board.name)">{{board.name}}</a>
         </div>
-        <button class="btn btn-flat" type="button" ng-click="addBoard()"><i class="fas fa-plus"></i> Add Board</button>
-        <button class="btn btn-flat" type="button" ng-click="addPage()"><i class="fas fa-plus"></i> Add Page</button>
-        <button class="btn btn-flat" type="button" ng-click="saveBoard()"><i class="fas fa-lg fa-save"></i></button>
+        <button class="btn btn-flat" type="button" ng-click="addBoard()"><i class="mdi mdi-plus"></i> Add Board</button>
+        <button class="btn btn-flat" type="button" ng-click="addPage()"><i class="mdi mdi-plus"></i> Add Page</button>
+        <button class="btn btn-flat" type="button" ng-click="saveBoard()"><i class="mdi mdi-content-save"></i></button>
     </nav>
     <div class="row mb-3">
         <div class="col-md-12">
