--- a/ui/app.less
+++ b/ui/app.less
@@ -1,17 +1,16 @@
 //@import "bower_components/bootstrap/less/bootstrap.less";
 //@import "bower_components/bootstrap/less/theme.less";
-@import "bower_components/font-awesome/less/fontawesome.less";
-@fa-font-path: "bower_components/font-awesome/fonts";
+//@import "bower_components/font-awesome/less/fontawesome.less";
+//@fa-font-path: "bower_components/font-awesome/fonts";
 
 @import "bower_components/angular-gridster/src/angular-gridster.less";
 
-
 /* Component LESS */
 @import "partial/editor/editor.less";
-@import "directive/dashboardCanvas/dashboardCanvas.less";
 @import "partial/dashboard/dashboard.less";
-@import "directive/dashboardViewer/dashboardViewer.less";
 @import "partial/testwidget/testwidget.less";
+@import "directive/dashboardCanvas/dashboardCanvas.less";
+@import "directive/dashboardViewer/dashboardViewer.less";
 /* Add Component LESS Above */
 
 body.dashboard-bg-black {
@@ -27,7 +26,7 @@ body.dashboard-bg-black {
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 .fade.in {
-    opacity: 1;
+    opacity: 1 !important;
 }
 
 .modal.in .modal-dialog {
@@ -118,10 +117,15 @@ body.dashboard-bg-black {
 
 
 /* WU icons mapping to HA */
+/*@wu_img_path: "bower_components/weather-underground-icons/dist/icons/";*/
+@wu_img_path: "icons/";
 
 /*! Black Day SVG Icons */
-.wu-black.wu-rainy { background: url(bower_components/weather-underground-icons/dist/icons/black/svg/rain.svg); }
-.wu-black.wu-windy { background: url(bower_components/weather-underground-icons/dist/icons/black/svg/hazy.svg); }
+.wu-black.wu-rainy { background: url("@{wu_img_path}/black/svg/rain.svg"); }
+.wu-black.wu-windy { background: url("@{wu_img_path}/black/svg/hazy.svg"); }
+.wu-black.wu-snowy { background: url("@{wu_img_path}/black/svg/snow.svg"); }
+.wu-black.wu-snowy-rainy { background: url("@{wu_img_path}/black/svg/snow.svg"); }
+.wu-black.wu-clear-night { background: url("@{wu_img_path}/black/svg/clear.svg"); }
 /*.wu-black.wu-chanceflurries { background: url(icons/black/svg/chanceflurries.svg); }
 .wu-black.wu-chancerain { background: url(icons/black/svg/chancerain.svg); }
 .wu-black.wu-chancesleet { background: url(icons/black/svg/chancesleet.svg); }
@@ -137,14 +141,18 @@ body.dashboard-bg-black {
 .wu-black.wu-partlycloudy { background: url(icons/black/svg/partlycloudy.svg); }
 .wu-black.wu-partlysunny { background: url(icons/black/svg/partlysunny.svg); }
 .wu-black.wu-sleet { background: url(icons/black/svg/sleet.svg); }
-.wu-black.wu-snow { background: url(icons/black/svg/snow.svg); }
+
 .wu-black.wu-sunny { background: url(icons/black/svg/sunny.svg); }
 .wu-black.wu-tstorms { background: url(icons/black/svg/tstorms.svg); }
 .wu-black.wu-unknown { background: url(icons/black/svg/unknown.svg); }*/
 
 /*! White Day SVG Icons */
-.wu-white.wu-rainy { background: url(bower_components/weather-underground-icons/dist/icons/white/svg/rain.svg); }
-.wu-white.wu-windy { background: url(bower_components/weather-underground-icons/dist/icons/white/svg/hazy.svg); }
+.wu-white.wu-rainy { background: url("@{wu_img_path}/white/svg/rain.svg"); }
+.wu-white.wu-windy { background: url("@{wu_img_path}/white/svg/hazy.svg"); }
+.wu-white.wu-snowy { background: url("@{wu_img_path}/white/svg/snow.svg"); }
+.wu-white.wu-snowy-rainy { background: url("@{wu_img_path}/white/svg/snow.svg"); }
+.wu-white.wu-clear-night { background: url("@{wu_img_path}/white/svg/clear.svg"); }
+
 /*.wu-white.wu-chanceflurries { background: url(icons/white/svg/chanceflurries.svg); }
 .wu-white.wu-chancerain { background: url(icons/white/svg/chancerain.svg); }
 .wu-white.wu-chancesleet { background: url(icons/white/svg/chancesleet.svg); }
@@ -160,7 +168,6 @@ body.dashboard-bg-black {
 .wu-white.wu-partlycloudy { background: url(icons/white/svg/partlycloudy.svg); }
 .wu-white.wu-partlysunny { background: url(icons/white/svg/partlysunny.svg); }
 .wu-white.wu-sleet { background: url(icons/white/svg/sleet.svg); }
-.wu-white.wu-snow { background: url(icons/white/svg/snow.svg); }
 .wu-white.wu-sunny { background: url(icons/white/svg/sunny.svg); }
 .wu-white.wu-tstorms { background: url(icons/white/svg/tstorms.svg); }
 .wu-white.wu-unknown { background: url(icons/white/svg/unknown.svg); }*/
@@ -189,3 +196,11 @@ body.dashboard-bg-black {
     width: 144px;
     height: 144px;
 }
+
+@font-face {
+    font-family: "Material Design Icons";
+    src: url("fonts/materialdesignicons-webfont.eot?v=4.7.95");
+    src: url("fonts/materialdesignicons-webfont.eot?#iefix&v=4.7.95") format("embedded-opentype"), url("fonts/materialdesignicons-webfont.woff2?v=4.7.95") format("woff2"), url("fonts/materialdesignicons-webfont.woff?v=4.7.95") format("woff"), url("fonts/materialdesignicons-webfont.ttf?v=4.7.95") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
