Preparing for multiple entities

--- a/ui/app.less
+++ b/ui/app.less
@@ -123,4 +123,14 @@ body.dashboard-bg-black {
     src: url("fonts/materialdesignicons-webfont.eot?#iefix&v=4.7.95") format("embedded-opentype"), url("fonts/materialdesignicons-webfont.woff2?v=4.7.95") format("woff2"), url("fonts/materialdesignicons-webfont.woff?v=4.7.95") format("woff"), url("fonts/materialdesignicons-webfont.ttf?v=4.7.95") format("truetype");
     font-weight: normal;
     font-style: normal;
-  }
+}
+
+.dashboard-bg-black .card {
+    background: black !important;
+    color: white !important;
+}
+
+.dashboard-bg-black .table {
+    background: black !important;
+    color: white !important;
+}
