--- a/ui/partial/testwidget/testwidget.less
+++ b/ui/partial/testwidget/testwidget.less
@@ -1,3 +1,8 @@
 .widget-test-preview > div {
     border: thin solid #2196F3 !important;
 }
+
+.test-widget.dashboard-bg-black {
+    background: black;
+    color: white;
+}
